...

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:id="@+id/picDate"
            android:layout_width="144dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="155dp"
            android:layout_marginLeft="100dp"
            android:onClick="datePickerReleaseDate"
            android:text="Start Date" />

        <Button
                android:id="@+id/picDate2"
                android:layout_width="144dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="260dp"
                android:layout_marginLeft="100dp"
                android:onClick="datePickerDueDate"
                android:text="Due Date" />

        <Button
            android:id="@+id/picDate3"
            android:layout_width="144dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="360dp"
            android:onClick="datePickerEndOfSemester"
            android:text="Make Invisible" />
        </RelativeLayout>


</android.support.constraint.ConstraintLayout>

